Testimonials now actually completed, put in about us section that was previously missing, also made small amendment to footer on testimonials and home page so about section a tags are spaced correctly and have more room to breath on mobile

--- a/resources/styles/home.scss
+++ b/resources/styles/home.scss
@@ -440,5 +440,13 @@ footer {
     .about {
         padding-top: 40px;
         background-color: $black;
+
+        a:first-child {
+            margin-left: 3%;
+        }
+
+        a {
+            margin-right: 3%;
+        }
     }
 }
