--- a/resources/styles/testimonials.scss
+++ b/resources/styles/testimonials.scss
@@ -185,6 +185,7 @@ main {
             text-align: right;
             line-height: 2em;
             word-spacing: .25em;
+            padding-top: 10%;
         }
     }
 
@@ -197,6 +198,42 @@ main {
             margin-top: 0px;
             width: 100%;
             height: 700px;
+        }
+    }
+}
+
+
+article {
+    font-family: $aleo;
+    color: $burn;
+    background-color: $black;
+    text-align: center;
+    border-bottom: 2px solid $burn;
+
+    @include desktop() {
+        text-align: left;
+    }
+
+    h2 {
+        margin: 0;
+        padding-top: 5%;
+        padding-bottom: 5%;
+        text-decoration: underline;
+
+        @include desktop() {
+            text-align: center;
+            font-size: 42px;
+        }
+    }
+
+    p {
+        margin: 0;
+        padding-bottom: 5%;
+
+        @include desktop() {
+            font-size: 18px;
+            margin-left: 25%;
+            margin-right: 25%;
         }
     }
 }
@@ -240,5 +277,13 @@ footer {
     .about {
         padding-top: 40px;
         background-color: $black;
+
+        a:first-child {
+            margin-left: 3%;
+        }
+
+        a {
+            margin-right: 3%;
+        }
     }
 }
